<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:padding="8dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_all_inclusive"
            android:contentDescription="@string/image_menu"
            app:tint="@color/purple_500" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_happy"
            android:contentDescription="@string/image_menu" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_sunny"
            android:contentDescription="@string/image_menu"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/linear_menu"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/hello_person"/>

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/message_motivation"/>

    <View
        android:elevation="5dp"
        android:layout_width="128dp"
        android:layout_below="@+id/text_message"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/purple_200" />

    <Button
        android:id="@+id/button_new_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/new_message"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

</RelativeLayout>